--- a/P1/S1/index.css
+++ b/P1/S1/index.css
@@ -4,8 +4,9 @@ body {
   
   /* Estilo para las etiquetas de tipo h1 */
   h1 {
-    color:black;
-  }
+    color:rgb(165, 128, 7);
+    font-family:'Times New Roman', Times, serif;
+    font-size:  xx-large;
   
   /* Estilo para los párrafos */
   p {
