--- a/P1/S1/index.css
+++ b/P1/S1/index.css
@@ -6,8 +6,15 @@ body {
   h1 {
     color:rgb(165, 128, 7);
     font-family:'Times New Roman', Times, serif;
-    font-size:  xx-large;
+    font-size:  xxx-large;
   
+
+    h3 {
+      color:rgb(165, 128, 7);
+      font-family:'Times New Roman', Times, serif;
+      font-size:  xx-large;
+  
+      
   /* Estilo para los párrafos */
   p {
     color: blue;
