--- a/P1/S1/CV.css
+++ b/P1/S1/CV.css
@@ -1,53 +1,67 @@
-body {
-    background-image: url("fondo1.jpg");
+body{
+    background-image: url("im1.jpeg");
+    background-position: top;
+    background-size: 600px;
+    font-family: 'Times New Roman', Times, serif;
+    padding:10px;
+    margin: 100px;
+  
   }
   
-  p {
-    font-family: Arial;
+  h1{
+    font-size: 65px;
+    color:rgb(201, 162, 37);
+    font-family:'Times New Roman', Times, serif;
+  }
+
+  h3{
+    color:rgb(201, 162, 37);
+    font-size: 80px
+    font-family:'Times New Roman', Times, serif;
+  }
+
+  h4 {
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    background-color: rgb(201, 162, 37);
+    border: 5px solid rgb(201, 162, 37);
     padding: 10px;
-    border: solid;
-    border-color: green;
-    margin: 20px;
-    color: black;
-    background-color: cornSilk;
   }
-  
-  div {
-     padding: 10px;
-     border: solid;
-     color: black;
-     border-color: dodgerblue;
-     margin: 30px;
-     background-color: lightblue;
-   }
-  
-   h1 {
-     font-family: monospace;
-     padding: 10px;
-     border: solid;
-     border-width: 7px;
-     color: royalblue;
-     border-color: darkgoldenrod;
-     margin: 30px;
-     background-color: Gold;
-   }
-  
-   li{
-     font-family: "Segoe IU", sans-serif;
-     font-size: x-large;
-   }
-  
-  .special {
-    font-family: "Consolas", monospace;
-    font-size: larger;
-    border-color: khaki;
+  .perfil{
+    background-color: rgb(255,255,255,0.85);
+    padding: 80px;
+    margin: 50px;
+    line-height:20px;
+    text-align: center;
   }
-  
-  .special2 {
-    border: none;
+  .datos{
+    background-color: rgb(255,255,255,0.85);
+    padding: 80px;
+    margin: 50px;
+    line-height:20px;
   }
-  
-  .special3 {
-    border: none;
-    background-color: lightblue;
+  .perfilCaronte{
+    background-color: rgb(255,255,255,0.85);
+    padding: 80px;
+    margin: 50px;
+    line-height:20px;
+    text-align: center;
+  }
+  #f_perfil{
+    width: 25%;
+    float: left;
+    padding: 0px;
+  }
+  .f_datos{
+    width:26px;
+    height:22px;
+    float: left;
+    padding-left:20px;
+  }
+  .f_boton{
+    width:40px;
+    height:40px;
+    align-items: center;
+    padding: 10px;
   }
