--- a/P1/S1/index.css
+++ b/P1/S1/index.css
@@ -27,6 +27,7 @@ body{
     border: 5px solid rgb(201, 162, 37);
     padding: 10px;
   }
+
   .perfil{
     background-color: rgb(255,255,255,0.85);
     padding: 80px;
@@ -47,11 +48,30 @@ body{
     line-height:20px;
     text-align: center;
   }
+
   #f_perfil{
     width: 25%;
     float: left;
     padding: 0px;
   }
+
+  #columnas{
+    column-count:2;
+    column-gap:20px;
+    column-rule:4px dotted gray;
+ }
+
+ #contenedor {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#contenedor > div {
+  width: 50%;
+}
+
+
   .f_datos{
     width:26px;
     height:22px;
@@ -63,4 +83,10 @@ body{
     height:40px;
     align-items: center;
     padding: 10px;
+  }
+
+  #f_hades{
+    width: 80%;
+    float: left;
+    padding: 25px;
   }
