Creacion archivos ejemplo

--- a/P1/S1/index.css
+++ b/P1/S1/index.css
@@ -28,6 +28,13 @@ body{
     padding: 10px;
   }
 
+  h5 {
+    text-align: center;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+  }
+
   .perfil{
     background-color: rgb(255,255,255,0.85);
     padding: 80px;
@@ -88,5 +95,5 @@ body{
   #f_hades{
     width: 80%;
     float: left;
-    padding: 25px;
+    padding: 50px;
   }
