--- a/P2/calculadora.css
+++ b/P2/calculadora.css
@@ -2,7 +2,7 @@
 body{
   background-image: url("fondo.jpg");
   background-position: center;
-  background-size: 1500px;
+  background-size: cover;
   padding:100px;
   margin: 100px;
 }
