--- a/P3/Prueba.css
+++ b/P3/Prueba.css
@@ -1,14 +1,33 @@
 canvas {
-    background-color: rgba(255, 207, 74, 0.555);
+    background-color: rgba(0, 0, 0, 0.241);
+    background-size: cover;
     border-style: solid;
     border-width: 1px;
     border-color: black;
     border-radius: 5px;
   }
 
+
+  img{
+    float: center;
+    margin: auto;
+    width: 50%;
+  }
+
   body{
-    background-color: rgba(255, 207, 74, 0.241);
+    background-image: url("fondo3.jpg");
+    background-position: center;
     background-size: cover;
+   
+   
     display: inline-flexbox;
     text-align:center;
   }
+
+  h1{
+    font-size: 50px;
+    color:rgb(0, 0, 0);
+    font-family:'Tungsten Black', Times, serif;
+  }
+
+
