--- a/P3/Videojuego.css
+++ b/P3/Videojuego.css
@@ -15,7 +15,7 @@ canvas {
   }
 
   body{
-    background-image: url("fondo3.jpg");
+    background-image: url("fondo3-2.jpeg");
     background-position: center;
     background-size: cover;
    
