--- a/P4/filtro.css
+++ b/P4/filtro.css
@@ -4,9 +4,9 @@ body {
   
   p{
     color: rgb(196, 43, 196);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     font-weight: 900;
-    font-size: 18px;
+    font-size: 22px;
   }
   
   /*Recoge los tres botones posibles de filtros*/
@@ -59,7 +59,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-top: 20px;
-    width: 500px;
+    width: 550px;
   }
   
   /*parte superior de la web, dos imagenes: izq,drch*/
