--- a/P4/filtro.css
+++ b/P4/filtro.css
@@ -12,7 +12,7 @@ body {
   /*Recoge los tres botones posibles de filtros*/
   button{
     background-color: #F5AAFF;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     border-radius: 4px;
     color: white;
     text-align: center;
